bases/apps/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: emby
  name: emby
spec:
  ports:
  - name: web
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: emby
  type: ClusterIP
